--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,8 +21,26 @@ services:
       networks:
         - app-network
 
+    db:
+      build: .docker/mysql
+      container_name: db
+      command: --innodb-use-native-aio=0
+      restart: always
+      tty: true
+      ports:
+        - "3306:3306"
+      volumes:
+        - .docker/dbdata:/var/lib/mysql
+      environment:
+        - MYSQL_DATABASE=laravel
+        - MYSQL_ROOT_PASSWORD=root
+        - MYSQL_USER=root
+      networks:
+        - app-network
+
     redis:
       image: redis:alpine
+      container_name: redis
       expose:
         - 6379
       networks:
