config dependencia nginx/app

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,6 +23,9 @@ services:
         - .:/var/www
       networks:
         - app-network
+      depends_on:
+        app:
+          condition: service_started
 
     db:
       build: .docker/mysql
