--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '2.3'
+version: '3'
 
 services:
     app:
@@ -9,8 +9,8 @@ services:
       networks:
         - app-network
       depends_on:
-        db:
-          condition: service_healthy
+        - db
+        - redis
 
     nginx:
       build: .docker/nginx
@@ -24,8 +24,7 @@ services:
       networks:
         - app-network
       depends_on:
-        app:
-          condition: service_started
+        - app
 
     db:
       build: .docker/mysql
@@ -43,11 +42,6 @@ services:
         - MYSQL_USER=root
       networks:
         - app-network
-      healthcheck:
-          test: ["CMD-SHELL", 'mysql -uroot --database=laravel --password=root --execute="SELECT count(table_name) > 0 FROM information_schema.tables;" --skip-column-names -B']
-          interval: 10s
-          timeout: 10s
-          retries: 6
 
     redis:
       image: redis:alpine
