--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,7 @@ services:
     app:
       build: .
       container_name: app
+      entrypoint: dockerize -wait tcp://db:3306 -timeout 60s ./.docker/app/entrypoint.sh
       volumes:
         - .:/var/www
       networks:
