--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     app:
       build: .
       container_name: app
-      entrypoint: dockerize -wait tcp://db:3306 -timeout 60s ./.docker/app/entrypoint.sh
+      entrypoint: dockerize -template ./.docker/app/.env:.env -wait tcp://db:3306 -timeout 60s ./.docker/app/entrypoint.sh
       volumes:
         - .:/var/www
       networks:
@@ -12,6 +12,11 @@ services:
       depends_on:
         - db
         - redis
+      environment:
+        - DB_HOST=db
+        - DB_DATABASE=laravel
+        - DB_USERNAME=root
+        - DB_PASSWORD=root
 
     nginx:
       build: .docker/nginx
